--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MYSQL_HOST=localhost
-MYSQL_USER=root
-MYSQL_PORT=3306
-MYSQL_PASSWORD=Wiwi3628@
-MYSQL_DATABASE=minsaeng
+MYSQL_HOST=
+MYSQL_USER=
+MYSQL_PORT=
+MYSQL_PASSWORD=
+MYSQL_DATABASE=
