최종 프로젝트 코드 업데이트

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-MYSQL_HOST=
-MYSQL_USER=
-MYSQL_PORT=
-MYSQL_PASSWORD=
-MYSQL_DATABASE=
+MYSQL_HOST=localhost        
+MYSQL_USER=root
+MYSQL_PORT=3306
+MYSQL_PASSWORD=Wiwi3628@
+MYSQL_DATABASE=minsaeng
