--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,26 @@
-# 1. 로컬 저장소에서 해당 파일을 Git 추적 목록에서 제거합니다.
-# (파일 자체는 로컬에 남아있지만, Git은 더 이상 이 파일을 관리하지 않습니다.)
-git rm --cached [파일_이름] 
+# 1. 보안 파일 (절대 커밋 금지)
+.env
+.env.local
 
-# 예시: 파일 이름이 .env 라고 가정
-# git rm --cached .env
+# 2. 가상 환경 (용량이 매우 큼)
+venv/
+env/
+.venv/
 
-# 2. 이 변경 사항을 커밋합니다. (이제 이 파일은 저장소에 없습니다.)
-git commit -m "Remove sensitive database config file"
+# 3. 파이썬 컴파일/캐시 파일 (불필요)
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
 
-# 3. 변경 사항을 GitHub에 푸시하여 원격 저장소에서도 파일을 삭제합니다.
-git push origin main
+# 4. IDE/에디터 설정 파일 (개인 설정)
+.vscode/
+.idea/
+
+# 5. 운영체제 임시 파일
+.DS_Store
+Thumbs.db
+
+# 6. 데이터베이스 파일 
+*.sqlite3
+*.db
